--- a/browserstack.yml
+++ b/browserstack.yml
@@ -1,5 +1,5 @@
-userName: ${{ secrets.BROWSERSTACK_USERNAME }}
-accessKey: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
+userName: $BROWSERSTACK_USERNAME
+accessKey: $BROWSERSTACK_ACCESS_KEY
 framework: junit5
 app: app/yodapp-beta.apk
 platforms:
@@ -12,7 +12,7 @@ platforms:
   - platformName: android
     deviceName: Motorola Moto G71 5G
     platformVersion: 11.0
-parallelsPerPlatform: 1
+parallelsPerPlatform: 5
 browserstackLocal: false
 buildName: junit5-appium
 buildIdentifier: ${BUILD_NUMBER}
@@ -20,5 +20,3 @@ projectName: Yodapp Android
 testObservability: true
 networkLogs: true
 consoleLogs: info
-
-source: junit5:appium-eclipse:v1.0.8
